[project]
name = "z-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch==2.3.1",
  "torchvision==0.18.1",
  "diffusers>=0.31.0",
  "transformers>=4.45.0",
  "accelerate>=1.1.1",
  "safetensors>=0.4.5",
  "pillow>=10.4.0",
  "gradio>=4.44.0",
  "gguf>=0.10.0",
]
